@@ -5,6 +5,7 @@ import java.nio.file.LinkOption;
 import java.nio.file.Path;
 import java.util.Collection;
 import java.util.Set;
+import java.util.function.Predicate;
 
 import com.devonfw.tools.ide.common.Tag;
 import com.devonfw.tools.ide.context.IdeContext;
@@ -512,6 +513,27 @@ public abstract class LocalToolCommandlet extends ToolCommandlet {
   public VersionIdentifier getLatestToolVersion() {
 
     return this.context.getDefaultToolRepository().resolveVersion(this.tool, getConfiguredEdition(), VersionIdentifier.LATEST, this);
+  }
+
+
+  /**
+   * Searches for a wrapper file in valid projects (containing a build file f.e. build.gradle or pom.xml) and returns its path.
+   *
+   * @param wrapperFileName the name of the wrapper file
+   * @param filter the {@link Predicate} to match
+   * @return Path of the wrapper file or {@code null} if none was found.
+   */
+  protected Path findWrapper(String wrapperFileName, Predicate<Path> filter) {
+    Path dir = context.getCwd();
+    // traverse the cwd directory containing a build file up till a wrapper file was found
+    while ((dir != null) && filter.test(dir)) {
+      if (Files.exists(dir.resolve(wrapperFileName))) {
+        context.debug("Using wrapper file at: {}", dir);
+        return dir.resolve(wrapperFileName);
+      }
+      dir = dir.getParent();
+    }
+    return null;
   }
 
 
