@@ -1,12 +1,14 @@
 package com.devonfw.tools.ide.tool.gradle;
 
 import java.io.IOException;
+import java.nio.file.Path;
 
 import org.junit.jupiter.api.Test;
 
 import com.devonfw.tools.ide.commandlet.InstallCommandlet;
 import com.devonfw.tools.ide.context.AbstractIdeContextTest;
 import com.devonfw.tools.ide.context.IdeTestContext;
+import com.devonfw.tools.ide.io.FileAccess;
 
 /**
  * Integration test of {@link Gradle}.
@@ -57,6 +59,37 @@ public class GradleTest extends AbstractIdeContextTest {
     // assert
     assertThat(context).logAtInfo().hasMessage("gradle " + "foo bar");
     checkInstallation(context);
+  }
+
+  /**
+   * Tests if gradle run will use a gradle wrapper file if it was found within a valid cwd containing a build.gradle.
+   */
+  @Test
+  public void testGradleRunWithFoundWrapper() {
+    // arrange
+    IdeTestContext context = newContext(PROJECT_GRADLE);
+    FileAccess fileAccess = context.getFileAccess();
+    Gradle gradle = context.getCommandletManager().getCommandlet(Gradle.class);
+    Path projectWithoutGradlew = context.getWorkspacePath().resolve("project-without-gradlew");
+    fileAccess.mkdirs(projectWithoutGradlew);
+    context.setCwd(projectWithoutGradlew, "main", context.getIdeHome());
+
+    gradle.arguments.addValue("foo");
+    gradle.arguments.addValue("bar");
+    gradle.install();
+    // create a build.gradle in a directory with no gradle wrapper file to trigger directory traversal
+    fileAccess.touch(projectWithoutGradlew.resolve("build.gradle"));
+    // copy the gradle wrapper file into the workspace
+    fileAccess.copy(gradle.getToolBinPath().resolve("gradlew"), context.getWorkspacePath());
+    // create a build.gradle next to the gradle wrapper file
+    fileAccess.touch(context.getWorkspacePath().resolve("build.gradle"));
+
+    // act
+    gradle.run();
+
+    // assert
+    assertThat(context).logAtDebug().hasMessage("Using wrapper file at: " + context.getWorkspacePath());
+    assertThat(context).logAtInfo().hasMessage("gradlew " + "foo bar");
   }
 
   private void checkInstallation(IdeTestContext context) throws IOException {
