@@ -6,6 +6,7 @@ This file documents all notable changes to https://github.com/devonfw/IDEasy[IDE
 
 Release with new features and bugfixes:
 
+* https://github.com/devonfw/IDEasy/issues/1372[#1372]: Add gradlew support
 * https://github.com/devonfw/IDEasy/issues/1304[#1304]: Error when reinstalling vscode
 * https://github.com/devonfw/IDEasy/issues/1160[#1160]: Print IDEasy version in ide status when offline
 * https://github.com/devonfw/IDEasy/issues/901[#901]: Consider maven wrapper mvnw
